--- a/beijing-cms/.settings/org.eclipse.wst.common.component
+++ b/beijing-cms/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="java-output-path" value="/bawei-cms/target/classes"/>
-        <property name="context-root" value="beijing-cms"/>
+        <property name="context-root" value="beijing-cms-empty"/>
     </wb-module>
 </project-modules>
